<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/daerah"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_profile"
            android:contentDescription="@string/image_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvLogOut"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/keluar"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinnerProvinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv3"
            app:smsp_arrowColor="@color/black"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="@string/provinsi"
            app:smsp_itemColor="@android:color/black"
            app:smsp_itemListHintBackgroundColor="@android:color/white"
            app:smsp_selectedItemListColor="@android:color/black" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kota"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinnerKota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv3"
            app:smsp_arrowColor="@color/black"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="@string/kota"
            app:smsp_itemColor="@android:color/black"
            app:smsp_itemListHintBackgroundColor="@android:color/white"
            app:smsp_selectedItemListColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kecamatan"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinnerKecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv3"
            app:smsp_arrowColor="@color/black"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="@string/kecamatan"
            app:smsp_itemColor="@android:color/black"
            app:smsp_itemListHintBackgroundColor="@android:color/white"
            app:smsp_selectedItemListColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelurahan"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinnerKelurahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv3"
            app:smsp_arrowColor="@color/black"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="@string/kelurahan"
            app:smsp_itemColor="@android:color/black"
            app:smsp_itemListHintBackgroundColor="@android:color/white"
            app:smsp_selectedItemListColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kodepos"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spinnerKodePos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv3"
            app:smsp_arrowColor="@color/black"
            app:smsp_enableErrorLabel="false"
            app:smsp_enableFloatingLabel="false"
            app:smsp_hint="@string/kodepos"
            app:smsp_itemColor="@android:color/black"
            app:smsp_itemListHintBackgroundColor="@android:color/white"
            app:smsp_selectedItemListColor="@android:color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>